--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Roboto Mono", monospace;
+}
+html {
+  --background: #f6f5f2;
+  --button: #a28089;
+  --gradient: linear-gradient(267deg, #da7c25 0.36%, #b923e1 102.06%);
+  --color: #faf1f3;
+}
+body {
+  height: 100vh;
+  width: 100%;
+  background: var(--background);
+  color: var(--color);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  background-color: rgba(18, 0, 0, 0.763);
+  width: 100%;
+  position: fixed;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  z-index: 9;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0px 3px 12px white;
+  border: 1px solid transparent;
+}
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 60px;
+  margin-left: 2rem;
+  font-size: 20px;
+}
+.nav-menu li {
+  cursor: pointer;
+  transition: 2s;
+}
+
+.nav-menu li:hover {
+  background: var(--gradient);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.nav-connect {
+  padding: 15px 30px;
+  border-radius: 50px;
+  font-size: 22px;
+  background: var(--gradient);
+  cursor: pointer;
+  transition: 0.5s;
+  margin-right: 2rem;
+}
+
+.nav-connect:hover {
+  transform: scale(1.05);
+}
+
+.nav-mob-close {
+  display: none;
+}
+
+.nav-mob-open {
+  display: none;
+}
+::-webkit-scrollbar{
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .navbar {
+    background-color: transparent;
+    box-shadow: none;
+    padding: 20px 50px;
+  }
+  .nav-connect {
+    display: none;
+  }
+  .nav-mob-open {
+    position: fixed;
+    font-size: 40px;
+    display: block;
+    
+    top: 3.5rem;
+    right: 3rem;
+    cursor: pointer;
+  }
+  .nav-mob-close {
+    display: block;
+    position: relative;
+    top: 30px;
+   left: 18rem;
+    width: 30px;
+  }
+  .nav-menu {
+    position: fixed;
+    flex-direction: column;
+    align-items: start;
+    top: 0;
+    gap: 30px;
+    background-color: #1f0016e4;
+    width: 350px;
+    height: 100%;
+    z-index: 2;
+    transition: right 0.5s;
+    right: -350px;
+  }
+  .nav-menu li {
+    font-size: 30px;
+    padding-left: 100px;
+    flex-direction: row;
+    gap: 20px;
+  }
 }
