--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -1,7 +1,7 @@
 .hero {
   background: url("../../assets/projectbg1.jpg") no-repeat center;
   background-size: cover;
-color: rgb(18, 0, 0);
+  color: rgb(18, 0, 0);
   width: 100%;
 
   min-height: 100vh;
@@ -9,12 +9,9 @@ color: rgb(18, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
- 
 
- .contain{
-  
+.contain {
   gap: 1rem;
   padding: 20px;
   margin-top: 6rem;
@@ -26,10 +23,9 @@ color: rgb(18, 0, 0);
   justify-content: center;
   flex-wrap: wrap;
   min-width: 30%;
- 
- }
+}
 
-.profile{
+.profile {
   box-shadow: 2px 3px 12px rgb(27, 8, 8);
   border: 1px solid transparent;
   display: flex;
@@ -39,46 +35,40 @@ color: rgb(18, 0, 0);
   height: 25rem;
   position: relative;
   background-color: rgb(18, 0, 0);
- 
+
   border-radius: 50%;
   overflow: hidden;
-
-
 }
-.profile-details-role{
+.profile-details-role {
   font-size: 2rem;
-   display: inline-block;
-   font-weight: 800;
+  display: inline-block;
+  font-weight: 800;
 }
-.profile:hover{
-  border:  1px solid rgb(239, 11, 224);
+.profile:hover {
+  border: 1px solid rgb(239, 11, 224);
   box-shadow: 0px 3px 12px red;
 }
-.profile-image{
-  width: 80rem;
+.profile-image {
+  width: 50rem;
   height: 30rem;
-  margin-left: 6rem;
 }
 
-
-.links{
-
+.links {
   align-items: center;
   margin-top: 1rem;
   display: flex;
   gap: 2rem;
 }
-.links a{
+.links a {
   font-size: 3.5rem;
 
- color: rgb(18, 0, 0);
-  
+  color: rgb(18, 0, 0);
 }
-.resume-link{
+.resume-link {
   text-decoration: none;
   color: rgb(18, 0, 0);
 }
-.primary-text{
+.primary-text {
   font-size: 30px;
   font-weight: 600;
 }
@@ -93,13 +83,12 @@ color: rgb(18, 0, 0);
   /* padding-bottom: 3rem; */
 }
 
-.profile-info p{
+.profile-info p {
   font-size: 30px;
   text-align: justify;
 }
 
 .hero h1 {
- 
   text-align: center;
   width: 90%;
   font-size: 50px;
@@ -160,44 +149,47 @@ color: rgb(18, 0, 0);
   .hero {
     flex-direction: column;
   }
-  .contain{
+  .contain {
     margin-left: 0px;
   }
   .profile-info {
-   margin-top: 2rem;
+    margin-top: 2rem;
     flex-wrap: wrap;
     width: 90%;
     padding: 20px;
-
   }
-.profile-info h1 span{
-  font-size: 30px;
-}
-  .profile-info p{
+  .profile-info h1 span {
+    font-size: 30px;
+  }
+  .profile-info p {
     text-align: justify;
     width: 90%;
   }
-  
-  .profile-details-role{
+
+  .profile-details-role {
     font-size: 1.5rem;
     font-weight: 500;
-   
   }
 }
 
 @media screen and (max-width: 500px) {
- .hero-action{
-  flex-direction: column;
- 
-  width: 90%;
- }
- .hero-connect {
-  padding: 20px 70px;
- 
-}
+  .hero-action {
+    flex-direction: column;
 
-.hero-resume {
-  padding: 18px 67px;
- 
-}
+    width: 90%;
+  }
+  .hero-connect {
+    padding: 20px 70px;
+  }
+
+  .hero-resume {
+    padding: 18px 67px;
+  }
+  .profile {
+    width: 23rem;
+    height: 24rem;
+  }
+ .links{
+  margin-right: 15%;
+ }
 }
