--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -150,10 +150,12 @@
     flex-direction: column;
   }
   .contain {
+   
+    width: 90%;
     margin-left: 0px;
   }
   .profile-info {
-    margin-top: 2rem;
+    margin-top: 0rem;
     flex-wrap: wrap;
     width: 90%;
     padding: 20px;
@@ -170,6 +172,9 @@
     font-size: 1.5rem;
     font-weight: 500;
   }
+ .links{
+  margin-left: 17%;
+ }
 }
 
 @media screen and (max-width: 500px) {
@@ -190,6 +195,7 @@
     height: 24rem;
   }
  .links{
+  margin-left: 0%;
   margin-right: 15%;
  }
 }
